# packit

./: .gitattributes  .gitignore  .packit.yaml  .pre-commit-config.yaml  .zuul.yaml  CHANGELOG.md  CONTRIBUTING.md  Containerfile  Containerfile.tests  Dockerfile  Dockerfile.tests  Jenkinsfile  LICENSE  LICENSE_HEADER.txt  Makefile  README.md  ROADMAP.md  Vagrantfile  _packitpatch  ansible.cfg  ci.fmf  deploy.yaml  hello_2.10-3build1.debian.tar.xz  hello_2.10-3build1.dsc  hello_2.10.orig.tar.gz.asc  knife.yml  package-lock.json  packit.spec  packitpatch  pyproject.toml  pytest.ini  recipe-tests.yaml  recipe.yaml  release-conf.yaml  setup.cfg  setup.py  sonar-project.properties  source-git-to-dist-git.py  source-git-to-srpm.py  sourcegit-mapping.json  (+5 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  stale.yml
.github/workflows/: build-and-push.yml  check-release-notes.yml  do-release.yml  do_release.yml  obs-build-smoke-test.yml  opened-issues-to-the-board.yml  opened-prs-to-the-board.yml  prepare-release.yml  pypi-publish.yml  sonarqube.yml  thoth-security-advise.yaml  update-aliases-fallback.yml
design/: logo-packit.sketch
docs/: 01.md  02.md  ARCHITECTURE.md  actions.md  build.md  configuration.md  create_bodhi_update.md  how-to-source-git.md  packit.dia  propose_update.md  source-git.md  srpm.md  sync-from-downstream.md  tests.md  update.md
fedora-tests/: simple.py  tests.yml  upstream.sh
files/: httpd-copy.sh  install-build-deps.yaml  install-requirements-git.yaml  install-requirements-pip.yaml  install-requirements-rpms.yaml  install-requirements.yaml  install-rpm-packages.yaml  install-tests-requirements.yaml  local-tests-requirements.yaml  packit-testing-farm-prepare-session-recording.yaml  packit-testing-farm-prepare.yaml  packit.wsgi  passwd  zuul-install-requirements-git-master.yaml  zuul-install-requirements-pip-master.yaml  zuul-install-requirements-pip.yaml  zuul-install-requirements-rpms.yaml  zuul-pre-commit.yaml  zuul-reverse-dep-packit-service.yaml  zuul-tests-session-recording.yaml  zuul-tests.yaml
files/bash-completion/: packit
files/scripts/: update_aliases_fallback.py
files/tasks/: build-rpm-deps.yaml  centos-packager.yaml  centpkg.yaml  configure-git.yaml  enablerepo-powertools.yaml  generic-dnf-requirements.yaml  install-ansible.yaml  install-packit-service.yaml  install-packit.yaml  ogr-from-master.yaml  ogr-master.yaml  ogr.yaml  packit-service-requirements.yaml  project-dir.yaml  python-compile-deps.yaml  requre-master.yaml  requre.yaml  rpm-test-deps.yaml  sandcastle-master.yaml  sandcastle.yaml  specfile.yaml  zuul-project-setup.yaml
hello-2.10/: Makefile.in  README  config.in  configure
hello-2.10/build-aux/: gendocs.sh  texinfo.tex
hello-2.10/debian/: changelog  control  watch
hello-2.10/lib/: error.c  getopt.c  getopt1.c  getopt_int.h
hello-2.10/po/: Makevars
hello-2.10/src/: hello.c
onegittorulethemall/: __init__.py  constant.py  utils.py
onegittorulethemall/services/: abstract.py  github.py  gitlab.py  our_pagure.py  pagure.py
packit/: __init__.py  actions.py  actions_handler.py  api.py  base_git.py  bot_api.py  cloned_project.py  command_handler.py  command_runner.py  config.py  constants.py  copr.py  copr_helper.py  dg_robot.py  dist_git_instance.py  distgit.py  downstream_checks.py  exceptions.py  fed_mes_consume.py  fedpkg.py  git_utils.py  helper.py  jobs.py  local_project.py  ogr_services.py  patches.py  pkgtool.py  schema.py  security.py  session_recording.py  source_git.py  specfile.py  status.py  sync.py  transformator.py  update_dist_git.py  upstream.py  utils.py  vm_image_build.py  watcher.py
packit/_compat/: __init__.py
packit/cli/: build.py  config.py  copr_build.py  create_update.py  dist_git.py  dist_git_init.py  generate.py  init.py  init_local_yaml.py  listen_to_fedmsg.py  local_build.py  options.py  packit_base.py  prepare_sources.py  propose_downstream.py  push_update.py  push_updates.py  scan_in_osh.py  source_git.py  source_git_init.py  source_git_status.py  sourcegit_to_dist_git.py  sourcegit_to_srpm.py  srpm.py  status.py  sync_from_downstream.py  test.py  types.py  update.py  update_dist_git.py  update_source_git.py  utils.py  validate_config.py  watch_fedora_ci.py  watch_sg_pr.py  watch_upstream_release.py
packit/config/: .package_config.py.swp  __init__.py  aliases.py  base_config.py  commands.py  common_package_config.py  config.py  job_config.py  notifications.py  package_config.py  package_config_validator.py  requirements.py  sources.py  sync_files_config.py
packit/data/: _packitpatch
packit/service/: web_hook.py
packit/utils/: __init__.py  bodhi.py  changelog_helper.py  commands.py  decorators.py  extensions.py  koji_helper.py  local_test_utils.py  logging.py  lookaside.py  monitoring.py  obs_helper.py  release_monitoring.py  repo.py  s3_lookaside.py  source_script.py  upstream_version.py  version.py  versions.py
plans/: full.fmf  git_reference.py  main.fmf  rpmlint.fmf  service-integration.fmf  session-recording.fmf  smoke.fmf
scripts/: changelog.py  prepare_release.py  prepare_release_requirements.txt
sourcegit/: api.py  config.py  constants.py  fed_mes_consume.py  sync.py  transformator.py  utils.py  watcher.py
sourcegit/cli/: source_git_to_dist_git.py  source_git_to_srpm.py  sourcegit_base.py  sourcegit_to_dist_git.py  sourcegit_to_srpm.py  watch_fedora_ci.py  watch_sg_pr.py
tests/: __init__.py  conftest.py  full.fmf  main.fmf  smoke.fmf  smoke.sh  spellbook.py  utils.py
tests/data/: copr_config
tests/functional/: README.md  __init__.py  main.fmf  spellbook.py  test_local_build.py  test_mock_build.py  test_prepare_sources.py  test_srpm.py  test_validate_config.py  test_webhook.py
tests/integration/: README.md  __init__.py  bodhi_latest_builds.py  bodhi_status_updates.py  conftest.py  main.fmf  pagure.py  test_actions.py  test_api.py  test_base_git.py  test_build.py  (+38 more)
tests_recording/: README.md  __init__.py  main.fmf  test_api.py  test_base_git.py  test_image_builder.py  test_local_project.py  test_repository_cache.py  test_status.py  testbase.py
(+382 files in other folders)
