[bdist_wheel]
universal = 1

[metadata]
name = packitos
url = https://github.com/packit-service/packit
description = A set of tools to integrate upstream open source projects into Fedora operating system.
long_description = file: README.md
long_description_content_type = text/markdown
author = Red Hat
author_email = user-cont-team@redhat.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development
    Topic :: Utilities
keywords =
    git
    packaging
    fedora
    rpm
    dist-git


[options]
packages = find:
python_requires = >=3.6
include_package_data = True

setup_requires =
    setuptools_scm
    setuptools_scm_git_archive

install_requires =
    GitPython
    PyGithub
    fedmsg
    libpagure
    click
    anymarkup
    jsonschema
    ogr
    rebasehelper
    munch
    # We can't install bodhi-client from PyPI: https://github.com/fedora-infra/bodhi/issues/3058
    # bodhi-client

[options.packages.find]
exclude =
    tests*

[options.extras_require]
testing =
    pytest

[options.entry_points]
console_scripts =
    packit=packit.cli.packit_base:packit_base
