[metadata]
name = packitos
description = A set of tools to integrate upstream open source projects into Fedora operating system.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/packit/packit
author = Red Hat
author_email = user-cont-team@redhat.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development
    Topic :: Utilities
keywords =
    git
    packaging
    fedora
    rpm
    dist-git

[options]
packages = find:
install_requires =
    GitPython
    PyYAML
    cccolutils
    click
    copr
    lazy_object_proxy
    marshmallow
    marshmallow-enum
    munch
    ogr
    packaging
    python-gnupg
    rebasehelper
    requests
    tabulate
    bodhi-client
    # Packit installed from rpm pulls in python3-koji as dependency, but
    # Python's pkg_resources doesn't recognize it, because it doesn't have egg-info.
    # Consequently packit fails with:
    # pkg_resources.DistributionNotFound: The 'koji' distribution was not found and is required by packitos
    # It was supposed to be fixed with https://bugzilla.redhat.com/show_bug.cgi?id=1750391
    # but the real culprit is https://pagure.io/koji/issue/912
    # koji
python_requires = >=3.6
include_package_data = True
setup_requires =
    setuptools_scm
    setuptools_scm_git_archive

[options.entry_points]
console_scripts =
    packit=packit.cli.packit_base:packit_base

[options.extras_require]
testing =
    pytest

[options.packages.find]
exclude =
    tests*

[options.data_files]
share/bash-completion/completions/ = files/bash-completion/packit
