[metadata]
name = packitos
description = A set of tools to integrate upstream open source projects into Fedora operating system.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/packit/packit
author = Red Hat
author_email = user-cont-team@redhat.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development
    Topic :: Utilities
keywords =
    git
    packaging
    fedora
    rpm
    dist-git

[options]
packages = find:
install_requires =
    GitPython
    PyYAML
    cccolutils
    click
    copr
    lazy_object_proxy
    marshmallow
    marshmallow-enum
    munch
    ogr
    packaging
    python-fedora
    python-gnupg
    rebasehelper
    requests
    setuptools
    tabulate
    bodhi-client < 6.0
    koji
    cachetools
    typing-extensions;python_version<"3.8"
python_requires = >=3.6
include_package_data = True
setup_requires =
    setuptools_scm
    setuptools_scm_git_archive
scripts =
    _packitpatch

[options.entry_points]
console_scripts =
    packit=packit.cli.packit_base:packit_base

[options.extras_require]
testing =
    pytest
    flexmock

[options.packages.find]
exclude =
    tests*

# needs setuptools >= 40.6.0
# [options.data_files]
# share/bash-completion/completions/ = files/bash-completion/packit
